# dagster-onibus-eletricos

./: .gitignore  README.md
onibus-eletricos/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
onibus-eletricos/src/onibus_eletricos/: definitions.py
onibus-eletricos/src/onibus_eletricos/assets/: definitions.py
onibus-eletricos/src/onibus_eletricos/assets/bronze/: csv_posicoes_onibus_bronze.py
onibus-eletricos/src/onibus_eletricos/assets/raw/api_olho_vivo/: ainda_n_sei_nome.py  json_posicoes_onibus_raw.py
onibus-eletricos/src/onibus_eletricos/assets/silver/: csv_posicoes_onibus_diario_silver.py
onibus-eletricos/src/onibus_eletricos/defs/: jobs.py  schedule.py
onibus-eletricos/src/onibus_eletricos/resources/api_olho_vivo/: __init__.py  olho_vivo_client.py  url_builder.py
onibus-eletricos/src/onibus_eletricos/resources/env_variables/: config.py  load_env.py
onibus-eletricos/src/onibus_eletricos/resources/localhost_data/: __init__.py  localhost_data.py  save_to_localhost.py
